// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Hilo's track destination action: all fields 1`] = `
Object {
  "event": Object {
    "anonymous_id": "YXFgmXq)",
    "contact_id": "YXFgmXq)",
    "name": "YXFgmXq)",
    "properties": Object {
      "testType": "YXFgmXq)",
    },
    "timestamp": Any<String>,
  },
}
`;

exports[`Testing snapshot for Hilo's track destination action: required fields 1`] = `
Object {
  "event": Object {
    "timestamp": Any<String>,
  },
}
`;
